--- a/Support_Vector_Machine.ipynb
+++ b/Support_Vector_Machine.ipynb
@@ -16,6 +16,19 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "TEAM MEMBER IS\n",
+        "\n",
+        "*   Oubousken Ilyas\n",
+        "*   Nguyen Le Khang\n",
+        "*   Nguyen Sieng\n"
+      ],
+      "metadata": {
+        "id": "vmhsmy25udz0"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "DfK_hn7Pe4RJ"
       },
@@ -32,7 +45,7 @@
           "height": 69
         },
         "id": "1m8cgZILZ9dz",
-        "outputId": "ddef060b-4915-4bcb-c70b-fe018a305ce8"
+        "outputId": "96791583-8135-4754-95df-e54c71023233"
       },
       "outputs": [
         {
@@ -43,9 +56,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-ec85e1ce-a72c-40ed-8bb4-66ea5a89e46b\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-282e5023-3f21-47a6-9174-67f39bd48ecb\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-ec85e1ce-a72c-40ed-8bb4-66ea5a89e46b\">\n",
+              "     <output id=\"result-282e5023-3f21-47a6-9174-67f39bd48ecb\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -260,25 +273,22 @@
         "id": "oPywXZD3eFos"
       },
       "source": [
-        "**Part 1** -  Familiarization and Basic Testing of the SVM Algorithm\n",
         "\n",
+        "Part 1: Familiarization and Basic Testing of the SVM Algorithm\n",
         "\n",
-        "1.   **--> Dataset Selection**\n",
-        "2.   *Algorithm Application*\n",
-        "3.   *Use Case Identification*\n",
-        "\n"
+        "**1.1 Dataset Selection**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {
         "id": "22k1xyG8crES",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "26ac7b62-956d-4928-8666-751a42bc42d3"
+        "outputId": "eaf79d88-e4ac-4e53-cdff-b7468941ba92"
       },
       "outputs": [
         {
@@ -302,7 +312,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-aca4b6b7-f082-498a-8146-f812cd82a9f5\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a5a8c870-74bf-4d2a-b644-0c18bca9b3ac\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -405,7 +415,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aca4b6b7-f082-498a-8146-f812cd82a9f5')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a5a8c870-74bf-4d2a-b644-0c18bca9b3ac')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -457,12 +467,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-aca4b6b7-f082-498a-8146-f812cd82a9f5 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a5a8c870-74bf-4d2a-b644-0c18bca9b3ac button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-aca4b6b7-f082-498a-8146-f812cd82a9f5');\n",
+              "        const element = document.querySelector('#df-a5a8c870-74bf-4d2a-b644-0c18bca9b3ac');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -482,8 +492,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ea264e32-8ebc-452d-ae50-d9b0b36b8660\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ea264e32-8ebc-452d-ae50-d9b0b36b8660')\"\n",
+              "<div id=\"df-b1e4d634-ec77-4336-a102-9e0e934b849a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b1e4d634-ec77-4336-a102-9e0e934b849a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -602,7 +612,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ea264e32-8ebc-452d-ae50-d9b0b36b8660 button');\n",
+              "        document.querySelector('#df-b1e4d634-ec77-4336-a102-9e0e934b849a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -619,7 +629,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 2
         }
       ],
       "source": [
@@ -646,7 +656,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c6c86652-d923-4cb6-c2f5-cac0a0c107cb"
+        "outputId": "52fa3bc5-0291-4488-d91f-a481b88be1ce"
       },
       "outputs": [
         {
@@ -681,7 +691,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd0a7b5c-350f-4afd-e2ad-93126df06724"
+        "outputId": "6f98727c-28f3-4ed0-a9f7-f4ec69b953e9"
       },
       "outputs": [
         {
@@ -709,7 +719,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1373f403-1443-4692-97a8-23ee7165a9f0"
+        "outputId": "3f1ac45a-6ddb-44f9-ec7a-2dc05ccf5b57"
       },
       "outputs": [
         {
@@ -729,7 +739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 6,
       "metadata": {
         "id": "s6wAE_fjjPYT"
       },
@@ -745,7 +755,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "**1.2 Algorithm Application**"
+      ],
       "metadata": {
         "id": "8o5YwLLtxBfu"
       }
@@ -753,17 +765,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Split into training and testing sets (80-20 split)\n",
+        "## separate features (X) and the target variable (y)\n",
+        "X = data.drop('Type', axis=1)\n",
+        "y = data['Type']\n",
+        "\n",
+        "## split into training and testing sets (80-20 split)\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "# Normalize the dataset\n",
+        "## normalize the dataset\n",
         "scaler = StandardScaler()\n",
         "X_train = scaler.fit_transform(X_train)\n",
         "X_test = scaler.transform(X_test)\n",
         "\n",
-        "# --- Part 1: Familiarization and Basic Testing ---\n",
-        "\n",
-        "# 1. Apply SVM with a linear kernel\n",
+        "## apply SVM with a linear kernel\n",
         "linear_svc = SVC(kernel='linear', random_state=42)\n",
         "linear_svc.fit(X_train, y_train)\n",
         "y_pred_linear = linear_svc.predict(X_test)\n",
@@ -776,9 +790,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tgDJyDIjyhkk",
-        "outputId": "17a45e3d-8310-416b-b530-5b2b5e4742a1"
+        "outputId": "ec3dd37c-832c-4960-be60-7ba7d6610fdd"
       },
-      "execution_count": 20,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,7 +820,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 2. Apply SVM with a polynomial kernel (degree 3)\n",
+        "## apply SVM with a polynomial kernel (degree 3)\n",
         "poly_svc = SVC(kernel='poly', degree=3, random_state=42)\n",
         "poly_svc.fit(X_train, y_train)\n",
         "y_pred_poly = poly_svc.predict(X_test)\n",
@@ -819,9 +833,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AFPomASMyqMZ",
-        "outputId": "918151cd-c8d1-4124-820d-97265fad6e9a"
+        "outputId": "dc519c91-d70a-4891-f24c-8f7fa120cfc9"
       },
-      "execution_count": 26,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,32 +863,46 @@
     {
       "cell_type": "markdown",
       "source": [
-        "            EXAMPLE NEEDED"
+        "**1.3 Use Case Identification**\n",
+        "1. Fraud Detection: SVM can help banks detect fraud by analyzing transactions. For instance, it can predict if a transaction is \"fraudulent\" or \"safe\" based on patterns like location, time, and amount.\n",
+        "\n",
+        "2. Face Recognition: SVM can be used in security systems to recognize faces. For example, it can compare a person’s photo with stored images to decide if it’s a match, like unlocking a phone using your face."
       ],
       "metadata": {
-        "id": "2dkwhVDz02n8"
+        "id": "EKJT7t-qx8VA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Part 2: In-Depth Experimentation with the SVM Algorithm\n",
+        "\n",
+        "**2.1 Parameter Experimentation**"
+      ],
+      "metadata": {
+        "id": "pA-HwYbb0eHD"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# --- Part 2: In-Depth Experimentation ---\n",
-        "\n",
-        "# Experiment with Polynomial Kernel (degree=4)\n",
+        "## experiment with Polynomial Kernel (degree=4)\n",
         "poly_svc_deg4 = SVC(kernel='poly', degree=4, C=10, class_weight='balanced', random_state=42)\n",
         "poly_svc_deg4.fit(X_train, y_train)\n",
         "y_pred_poly_deg4 = poly_svc_deg4.predict(X_test)\n",
         "print(\"Polynomial Kernel (degree=4) Performance with Class Balancing:\\n\")\n",
-        "print(classification_report(y_test, y_pred_poly_deg4, zero_division=0))\n"
+        "print(classification_report(y_test, y_pred_poly_deg4, zero_division=0))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DQfCiduJyxJ9",
-        "outputId": "96e748d6-b4ef-4e5f-87e8-7327d08eb4e7"
+        "outputId": "c88eecaa-599f-4dfa-b6d5-5990dfaa4072"
       },
-      "execution_count": 27,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -900,9 +928,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**2.3 Kernel Comparison**"
+      ],
+      "metadata": {
+        "id": "fE0vU5-_1Dzu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Compare with RBF Kernel\n",
+        "## compare with RBF Kernel\n",
         "rbf_svc = SVC(kernel='rbf', class_weight='balanced', random_state=42)\n",
         "rbf_svc.fit(X_train, y_train)\n",
         "y_pred_rbf = rbf_svc.predict(X_test)\n",
@@ -915,9 +952,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x50vzbZzy2MH",
-        "outputId": "ddde28a5-94de-4d72-d3ae-d0197d7a48e8"
+        "outputId": "6bf51896-13b4-4920-eae8-b3351a0d2d66"
       },
-      "execution_count": 30,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -945,7 +982,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Visualization of Confusion Matrices ---\n",
+        "## Visualization of Confusion Matrice\n",
         "\n",
         "def plot_confusion_matrix(y_true, y_pred, title):\n",
         "    cm = confusion_matrix(y_true, y_pred)\n",
@@ -956,7 +993,7 @@
         "    plt.ylabel('Actual')\n",
         "    plt.show()\n",
         "\n",
-        "# Plot confusion matrices for each kernel\n",
+        "## plot confusion matrices for each kernel\n",
         "plot_confusion_matrix(y_test, y_pred_linear, \"Confusion Matrix: Linear Kernel\")\n",
         "print(\"\\n\")\n",
         "plot_confusion_matrix(y_test, y_pred_poly, \"Confusion Matrix: Polynomial Kernel (degree=3)\")\n",
@@ -970,11 +1007,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "collapsed": true,
         "id": "_x-xNOTevrz6",
-        "outputId": "9d68f11f-fb74-45bf-d7da-909de03b3fa0"
+        "outputId": "41497a2a-f2e7-47e0-f913-5f2df8af578d"
       },
-      "execution_count": 29,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
